Enhance Electric Vehicle DataGrid Application with comprehensive features and improved structure. Updated README with detailed project description, features, technology stack, and installation instructions. Implemented frontend components using React and AG Grid, including data grid, search and filter functionalities, and vehicle detail dialogs. Established backend API with Express.js for CRUD operations and CSV file uploads. Added ESLint configuration for code quality and improved package dependencies.

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,24 +1,26 @@
 {
   "development": {
-    "username": process.env.DB_USERNAME,
-    "password": process.env.DB_PASSWORD,
-    "database": process.env.DB_DATABASE,
-    "host": process.env.DB_HOST,
-    "port": process.env.DB_PORT,
+    "username": "root",
+    "password": "password",
+    "database": "bmw_datagrid",
+    "host": "localhost",
+    "port": 3306,
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
+    "password": "password",
+    "database": "bmw_datagrid_test",
+    "host": "localhost",
+    "port": 3306,
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "password": "password",
+    "database": "bmw_datagrid_prod",
+    "host": "localhost",
+    "port": 3306,
     "dialect": "mysql"
   }
 }
